--- a/index.html
+++ b/index.html
@@ -17,29 +17,27 @@
         <!-- text and button container -->
         <form class="note-container">
                 <div class="note-title">
-                    <!-- <p>Title</p> -->
                     <textarea
-                        name="input-field"
+                        name="input-field1"
                         id="title-box"
-                        cols="12"
+                        cols="20"
                         rows="1"
                         placeholder="Title..." >
                     </textarea>
                 </div>
                 <div class="note-textbox">
                     <textarea
-                        name="input-field"
+                        name="input-field2"
                         id="body-box"
-                        cols="27"
+                        cols="40"
                         rows="10"
                         placeholder="Type here..." >
                     </textarea>
                 </div>
-            </div>
-            <div class="done-button"><button>Done</button></div>
+            <div class="done-button"><button type="submit">Done</button></div>
         </form>
         <section class="button-container">
-            <div class="see-notes"><button>See Notes</button></div>
+            <div class="see-notes"><button type="submit">See Notes</button></div>
         </section>
     </main>
     
