--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main class="body-container">
         <!-- Header Container -->
         <div class="header-container">
-            <h1>Notebook</h1>
+            <h1 class>Notebook</h1>
         </div>
         <!-- text and button container -->
         <form class="note-container">
@@ -34,11 +34,17 @@
                         placeholder="Type here..." >
                     </textarea>
                 </div>
-            <div class="done-button"><button type="submit">Done</button></div>
+            <div><button class="done-button" type="submit">Done</button></div>
+            <div><button class="see-notes" type="submit">See Notes</button></div>
         </form>
         <section class="button-container">
-            <div class="see-notes"><button type="submit">See Notes</button></div>
         </section>
+        <div class="old-notes-title">
+            <h3>Previous Notes</h3>
+            <div class="old-note-container">
+               
+            </div>
+        </div>
     </main>
     
 </body>
