--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
         <!-- text and button container -->
         <form class="note-container">
                 <div class="note-title">
+                    <h3>Title of Notes</h3>
                     <textarea
                         name="input-field1"
                         id="title-box"
-                        cols="20"
+                        cols="40"
                         rows="1"
                         placeholder="Title..." >
                     </textarea>
                 </div>
+                <h3>Contents</h3>
                 <div class="note-textbox">
                     <textarea
                         name="input-field2"
